# CfP

./: .env.example  .gitattributes  .gitignore  CfP.code-workspace  README.md  docker-compose.yml  mkdocs.yml
.claude/: settings.local.json
cfp-agent/: .env.example  .gitignore  PLAN.md  agent.py  criteria.yaml  main.py  models.py  pyproject.toml  region_map.py  sources.yaml  tools.py
cfp-agent/results/: latest.json
cfp-agent/results/history/: 2026-04-22.json  2026-04-23.json  2026-04-27.json  2026-05-04.json  2026-05-11.json  2026-05-18.json  2026-05-25.json  2026-06-01.json  2026-06-08.json  2026-06-15.json  2026-06-22.json  2026-06-29.json
cfp-agent/tests/: conftest.py  test_agent.py  test_main.py  test_models.py  test_tools.py
chat-server/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
classifier/: Dockerfile  README.md  pyproject.toml
classifier/app/: baseClassifier.py  classifier.py  openRouterClassifier.py  ragClassifier.py
docs/: .dockerignore  Dockerfile  architecture.md  deployment.md
frontend/: .cta.json  .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  prettier.config.js  tsconfig.json  vite.config.ts
keycloak/: keycloak-realm.json
management/: Dockerfile  build.gradle.kts  docker-compose.yml  settings.gradle.kts
rabbitmq/: Dockerfile  custom-entrypoint.sh  definitions.template.json  rabbitmq.conf
redis/: Dockerfile  docker-entrypoint.sh  users.acl.template
scraper/: Dockerfile  README.md  build.gradle.kts
(+300 files in other folders)
